cluster/apps/default/notgroschen/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notgroschen
  namespace: default
spec:
  selector:
    app: notgroschen
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
